# mist

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
cmake/: mistConfig.cmake.in
include/mist/: mist.h  rnd.h
include/mist/logger/: logger.h  logger_types.h  multi_progress_bar.h  progress_bar.h  progress_bar_registry.h
include/mist/math/: vec.h
include/mist/ring_finding/: hough_transform.h
scripts/: install.sh  install_with_tests.sh
src/logger/: logger.cpp  logger.cxx  logger_types.cpp  logger_types.cxx  multi_progress_bar.cpp  multi_progress_bar.cxx  progress_bar.cpp  progress_bar.cxx  progress_bar_registry.cxx
src/ring_finding/: hough_transform.cpp  hough_transform.cxx
test/: logger.cxx  tester_hough.cxx  tester_logger.cxx  tester_rnd.cxx
